Update Cartera equal weight.ipynb

--- a/Cartera equal weight.ipynb
+++ b/Cartera equal weight.ipynb
@@ -139,7 +139,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sharpe = df.mean()/df.std()"
+        "sharpe = df.mean()/df.std()*np.sqrt(252)"
       ],
       "metadata": {
         "id": "W0ZVx0Yr487V"
